--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Herman-Botz",
+  "name": "Putbotz",
   "version": "1",
-  "description": "Jangan Spam Ya",
+  "description": "Made By ©Putbotz",
   "depecrated": false,
   "main": "index.js",
   "directories": {
